--- a/CNN/handwrittendigit.ipynb
+++ b/CNN/handwrittendigit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,25 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-      "11490434/11490434 [==============================] - 3s 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,48 +77,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/12\n",
-      "120/120 [==============================] - 62s 510ms/step - loss: 2.4757 - accuracy: 0.0904\n",
-      "Epoch 2/12\n",
-      "120/120 [==============================] - 71s 594ms/step - loss: 2.4575 - accuracy: 0.0904\n",
-      "Epoch 3/12\n",
-      "120/120 [==============================] - 78s 650ms/step - loss: 2.4398 - accuracy: 0.0904\n",
-      "Epoch 4/12\n",
-      "120/120 [==============================] - 55s 462ms/step - loss: 2.4229 - accuracy: 0.0904\n",
-      "Epoch 5/12\n",
-      "120/120 [==============================] - 55s 461ms/step - loss: 2.4069 - accuracy: 0.0904\n",
-      "Epoch 6/12\n",
-      "120/120 [==============================] - 74s 614ms/step - loss: 2.3912 - accuracy: 0.0904\n",
-      "Epoch 7/12\n",
-      "120/120 [==============================] - 73s 605ms/step - loss: 2.3766 - accuracy: 0.0904\n",
-      "Epoch 8/12\n",
-      "120/120 [==============================] - 71s 596ms/step - loss: 2.3620 - accuracy: 0.0904\n",
-      "Epoch 9/12\n",
-      "120/120 [==============================] - 65s 543ms/step - loss: 2.3487 - accuracy: 0.0904\n",
-      "Epoch 10/12\n",
-      "120/120 [==============================] - 65s 543ms/step - loss: 2.3355 - accuracy: 0.0905\n",
-      "Epoch 11/12\n",
-      "120/120 [==============================] - 64s 533ms/step - loss: 2.3233 - accuracy: 0.0920\n",
-      "Epoch 12/12\n",
-      "120/120 [==============================] - 63s 528ms/step - loss: 2.3114 - accuracy: 0.0956\n"
+      "Epoch 1/5\n",
+      "120/120 [==============================] - 66s 544ms/step - loss: 2.5829 - accuracy: 0.0993\n",
+      "Epoch 2/5\n",
+      "120/120 [==============================] - 70s 586ms/step - loss: 2.5633 - accuracy: 0.0993\n",
+      "Epoch 3/5\n",
+      "120/120 [==============================] - 64s 530ms/step - loss: 2.5438 - accuracy: 0.0993\n",
+      "Epoch 4/5\n",
+      "120/120 [==============================] - 68s 570ms/step - loss: 2.5242 - accuracy: 0.0993\n",
+      "Epoch 5/5\n",
+      " 45/120 [==========>...................] - ETA: 38s - loss: 2.5100 - accuracy: 0.0970"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x2423695add0>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -136,12 +103,12 @@
     "\t\t\tloss=keras.losses.categorical_crossentropy,\n",
     "\t\t\tmetrics=['accuracy'])\n",
     "\n",
-    "model.fit(x_train, y_train, epochs=12, batch_size=500)\n"
+    "model.fit(x_train, y_train, epochs=5, batch_size=500)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
