--- a/CNN/handwrittendigit.ipynb
+++ b/CNN/handwrittendigit.ipynb
@@ -93,8 +93,18 @@
       "Epoch 4/5\n",
       "120/120 [==============================] - 68s 570ms/step - loss: 2.5242 - accuracy: 0.0993\n",
       "Epoch 5/5\n",
-      " 45/120 [==========>...................] - ETA: 38s - loss: 2.5100 - accuracy: 0.0970"
+      "120/120 [==============================] - 65s 536ms/step - loss: 2.5050 - accuracy: 0.0993\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x24236927b10>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -108,15 +118,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss= 2.305178642272949\n",
-      "accuracy= 0.08919999748468399\n"
+      "loss= 2.49363112449646\n",
+      "accuracy= 0.10320000350475311\n"
      ]
     }
    ],
