--- a/RNN/clothing.ipynb
+++ b/RNN/clothing.ipynb
@@ -231,6 +231,40 @@
     "\t\t\t\t\ty_train,\n",
     "\t\t\t\t\tepochs=5)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#lstm\n",
+    "model = keras.models.Sequential()\n",
+    "model.add(keras.layers.Embedding(10000, 128))\n",
+    "model.add(keras.layers.Bidirectional(\n",
+    "\tkeras.layers.LSTM(64, return_sequences=True)))\n",
+    "model.add(keras.layers.Bidirectional(keras.layers.LSTM(64)))\n",
+    "model.add(keras.layers.Dense(128, activation=\"relu\"))\n",
+    "model.add(keras.layers.Dropout(0.4))\n",
+    "model.add(keras.layers.Dense(1, activation=\"sigmoid\"))\n",
+    "\n",
+    "model.compile(\"rmsprop\", \"binary_crossentropy\", metrics=[\"accuracy\"])\n",
+    "history = model.fit(train_pad, y_train, epochs=5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(\"rmsprop\",\n",
+    "\t\t\t\"binary_crossentropy\",\n",
+    "\t\t\tmetrics=[\"accuracy\"])\n",
+    "history = model.fit(train_pad,\n",
+    "\t\t\t\t\ty_train,\n",
+    "\t\t\t\t\tepochs=5)\n"
+   ]
   }
  ],
  "metadata": {
