--- a/Word Embeddings/word.ipynb
+++ b/Word Embeddings/word.ipynb
@@ -31,7 +31,7 @@
     "from gensim.models import Word2Vec\n",
     "\n",
     "# Reads ‘alice.txt’ file\n",
-    "sample = open(\"D:\\Intern Project\\Word Embeddings\")\n",
+    "sample = open(\"D:\\Intern Project\\Word Embeddings\", \"utf8\")\n",
     "s = sample.read()\n",
     "\n",
     "# Replaces escape character with space\n",
