--- a/CNN/handwrittendigit.ipynb
+++ b/CNN/handwrittendigit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,69 +71,58 @@
     "layer3 = MaxPooling2D(pool_size=(3, 3))(layer2)\n",
     "layer4 = Dropout(0.5)(layer3)\n",
     "layer5 = Flatten()(layer4)\n",
-    "layer6 = Dense(250, activation='sigmoid')(layer5)\n",
+    "layer6 = Dense(250, activation='relu')(layer5)\n",
     "layer7 = Dense(10, activation='softmax')(layer6)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/5\n",
-      "120/120 [==============================] - 66s 544ms/step - loss: 2.5829 - accuracy: 0.0993\n",
-      "Epoch 2/5\n",
-      "120/120 [==============================] - 70s 586ms/step - loss: 2.5633 - accuracy: 0.0993\n",
-      "Epoch 3/5\n",
-      "120/120 [==============================] - 64s 530ms/step - loss: 2.5438 - accuracy: 0.0993\n",
-      "Epoch 4/5\n",
-      "120/120 [==============================] - 68s 570ms/step - loss: 2.5242 - accuracy: 0.0993\n",
-      "Epoch 5/5\n",
-      "120/120 [==============================] - 65s 536ms/step - loss: 2.5050 - accuracy: 0.0993\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x24236927b10>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = Model([inpx], layer7)\n",
     "model.compile(optimizer=keras.optimizers.Adadelta(),\n",
     "\t\t\tloss=keras.losses.categorical_crossentropy,\n",
     "\t\t\tmetrics=['accuracy'])\n",
     "\n",
-    "model.fit(x_train, y_train, epochs=5, batch_size=500)\n"
+    "model.fit(x_train, y_train, epochs=30, batch_size=25)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loss= 2.49363112449646\n",
-      "accuracy= 0.10320000350475311\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "score = model.evaluate(x_test, y_test, verbose=0)\n",
     "print('loss=', score[0])\n",
     "print('accuracy=', score[1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import keras\n",
+    "from keras.models import Model\n",
+    "from keras.layers import Input, Conv2D, MaxPooling2D, Dropout, Flatten, Dense\n",
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "y_pred = model.predict(x_test)\n",
+    "\n",
+    "# Convert predictions and true labels to class labels\n",
+    "y_pred_labels = np.argmax(y_pred, axis=1)\n",
+    "y_test_labels = np.argmax(y_test, axis=1)\n",
+    "\n",
+    "# Calculate the F-score\n",
+    "f_score = f1_score(y_test_labels, y_pred_labels, average='micro')\n",
+    "\n",
+    "print(\"F-score: \", f_score)"
    ]
   }
  ],
