--- a/Word Embeddings/word.ipynb
+++ b/Word Embeddings/word.ipynb
@@ -2,22 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "PermissionError",
-     "evalue": "[Errno 13] Permission denied: 'D:\\\\Intern Project\\\\Word Embeddings'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mgensim\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodels\u001b[39;00m \u001b[39mimport\u001b[39;00m Word2Vec\n\u001b[0;32m     10\u001b[0m \u001b[39m# Reads ‘alice.txt’ file\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m sample \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(\u001b[39m\"\u001b[39;49m\u001b[39mD:\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mIntern Project\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mWord Embeddings\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m     12\u001b[0m s \u001b[39m=\u001b[39m sample\u001b[39m.\u001b[39mread()\n\u001b[0;32m     14\u001b[0m \u001b[39m# Replaces escape character with space\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\ARUNDHATI\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    275\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[0;32m    276\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    277\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    278\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    279\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m     )\n\u001b[1;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "\u001b[1;31mPermissionError\u001b[0m: [Errno 13] Permission denied: 'D:\\\\Intern Project\\\\Word Embeddings'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -74,6 +61,99 @@
     "print(\"Cosine similarity between 'alice' \" +\n",
     "\t\t\t\"and 'machines' - Skip Gram : \",\n",
     "\tmodel2.wv.similarity('alice', 'machines'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "showing info https://raw.githubusercontent.com/nltk/nltk_data/gh-pages/index.xml\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "showing info https://raw.githubusercontent.com/nltk/nltk_data/gh-pages/index.xml\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "\n",
+    "# Download NLTK data\n",
+    "nltk.download()\n",
+    "\n",
+    "# Import necessary modules\n",
+    "from nltk.tokenize import sent_tokenize, word_tokenize\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(action='ignore')\n",
+    "\n",
+    "import gensim\n",
+    "from gensim.models import Word2Vec\n",
+    "\n",
+    "# Read 'alice.txt' file\n",
+    "sample = open(\"D:/Intern Project/Word Embeddings/guttenberg.txt\", encoding=\"utf-8\")\n",
+    "s = sample.read()\n",
+    "\n",
+    "# Replace escape character with space\n",
+    "f = s.replace(\"\\n\", \" \")\n",
+    "\n",
+    "data = []\n",
+    "\n",
+    "# Iterate through each sentence in the file\n",
+    "for i in sent_tokenize(f):\n",
+    "    temp = []\n",
+    "    \n",
+    "    # Tokenize the sentence into words\n",
+    "    for j in word_tokenize(i):\n",
+    "        temp.append(j.lower())\n",
+    "\n",
+    "    data.append(temp)\n",
+    "\n",
+    "# Create CBOW model\n",
+    "model1 = gensim.models.Word2Vec(data, min_count=1, vector_size=100, window=5)\n",
+    "\n",
+    "# Print results\n",
+    "print(\"Cosine similarity between 'alice' and 'wonderland' - CBOW: \",\n",
+    "      model1.wv.similarity('alice', 'wonderland'))\n",
+    "\t\n",
+    "print(\"Cosine similarity between 'alice' and 'machines' - CBOW: \",\n",
+    "      model1.wv.similarity('alice', 'machines'))\n",
+    "\n",
+    "# Create Skip Gram model\n",
+    "model2 = gensim.models.Word2Vec(data, min_count=1, vector_size=100, window=5, sg=1)\n",
+    "\n",
+    "# Print results\n",
+    "print(\"Cosine similarity between 'alice' and 'wonderland' - Skip Gram: \",\n",
+    "      model2.wv.similarity('alice', 'wonderland'))\n",
+    "\t\n",
+    "print(\"Cosine similarity between 'alice' and 'machines' - Skip Gram: \",\n",
+    "      model2.wv.similarity('alice', 'machines'))\n"
    ]
   }
  ],
